--- a/web_app/src/templates/reports/dpu_filter.html
+++ b/web_app/src/templates/reports/dpu_filter.html
@@ -99,6 +99,28 @@ $("#dpu_search").click(function(e){
         "type": frm.attr('method'),
         "url": frm.attr('action'),
         "data" : frm.serialize(),
+        beforeSend: function(xhr, settings) {
+             function getCookie(name) {
+                 var cookieValue = null;
+                 if (document.cookie && document.cookie != '') {
+                     var cookies = document.cookie.split(';');
+                     for (var i = 0; i < cookies.length; i++) {
+                         var cookie = jQuery.trim(cookies[i]);
+                         // Does this cookie string begin with the name we want?
+                         if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                             cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                             break;
+                         }
+                     }
+                 }
+                 return cookieValue;
+             }
+             if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                 // Only send the token to relative URLs i.e. locally.
+                 xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+             }
+             $.showLoading({allowHide: true}); 
+         },
         success: function(data) {
           // alert(data)
             $("#rolldown_dpu_date_wise").html("");
@@ -109,6 +131,12 @@ $("#dpu_search").click(function(e){
             $('#overall_dpu_date_wise').show();
             dpu_date_wise_charts(data)
         },
+        complete: function() {
+            $.hideLoading(); 
+        },
+        error: function() {
+            alert('Error') 
+        }  
     });
   });
 });
