--- a/web_app/src/templates/reports/rft_overall_filter_form.html
+++ b/web_app/src/templates/reports/rft_overall_filter_form.html
@@ -65,13 +65,41 @@ $("#id_rft_overall_plants, #id_rft_overall_markets, #id_rft_overall_shifts, #id_
                 'form': getFormData(frm),
               },
               dataType: 'json',
+              beforeSend: function(xhr, settings) {
+                 function getCookie(name) {
+                     var cookieValue = null;
+                     if (document.cookie && document.cookie != '') {
+                         var cookies = document.cookie.split(';');
+                         for (var i = 0; i < cookies.length; i++) {
+                             var cookie = jQuery.trim(cookies[i]);
+                             // Does this cookie string begin with the name we want?
+                             if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                                 cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                                 break;
+                             }
+                         }
+                     }
+                     return cookieValue;
+                 }
+                 if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                     // Only send the token to relative URLs i.e. locally.
+                     xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+                 }
+                 $.showLoading({allowHide: true}); 
+             },
               success: function (data) {
                   $('#overall_date_wise').html("");
                   $('#overall_date_wise').hide();
                   $('#overall_filter_wise').html("");
                   $('#overall_filter_wise').show();
                   overall_filter_wise_charts(data)
-              }
+              },
+              complete: function() {
+                  $.hideLoading(); 
+              },
+              error: function() {
+                  alert('Error') 
+              }  
             });   
         }
       });
