--- a/web_app/src/templates/reports/rft_rolldown_filter_form.html
+++ b/web_app/src/templates/reports/rft_rolldown_filter_form.html
@@ -46,6 +46,7 @@
 $("#id_rft_rolldown_plants, #id_rft_rolldown_markets, #id_rft_rolldown_shifts, #id_rft_rolldown_base_models, #id_rft_rolldown_models, #id_rft_rolldown_stations").change(function (e) {
       e.preventDefault();
 
+      var target = $('#rolldown_filter_form_div');
       var frm = $(this).closest('form');
       var from_date = $("#rft_filter input[name=from_date]").val();
       var to_date = $("#rft_filter input[name=to_date]").val();   
@@ -65,13 +66,41 @@ $("#id_rft_rolldown_plants, #id_rft_rolldown_markets, #id_rft_rolldown_shifts, #
                 'form': getFormData(frm),
               },
               dataType: 'json',
+              beforeSend: function(xhr, settings) {
+                 function getCookie(name) {
+                     var cookieValue = null;
+                     if (document.cookie && document.cookie != '') {
+                         var cookies = document.cookie.split(';');
+                         for (var i = 0; i < cookies.length; i++) {
+                             var cookie = jQuery.trim(cookies[i]);
+                             // Does this cookie string begin with the name we want?
+                             if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                                 cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                                 break;
+                             }
+                         }
+                     }
+                     return cookieValue;
+                 }
+                 if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                     // Only send the token to relative URLs i.e. locally.
+                     xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+                 }
+                 $.showLoading({allowHide: true}); 
+             },
               success: function (data) {
                   $('#rolldown_date_wise').html("");
                   $('#rolldown_date_wise').hide();
                   $('#rolldown_filter_wise').html("");
                   $('#rolldown_filter_wise').show();
                   rolldown_filter_wise_charts(data)
-              }
+              },
+              complete: function() {
+                  $.hideLoading(); 
+              },
+              error: function() {
+                  alert('Error') 
+              }  
             });   
         }
       });
